# caustic

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh  libmp7.rlib
.github/: FUNDING.yml
.github/workflows/: ci.yml  test.yml
benches/: solver_kernels.rs
src/: lib.rs  serde_helpers.rs
src/algos/: mod.rs
src/core/: mod.rs
src/init/: arbitrary.rs  mod.rs
src/output/exit/: mod.rs
src/sim/: mod.rs
src/time/: mod.rs
src/time/constraints/: mod.rs
src/tooling/: mod.rs
src/tooling/core/: advecator.rs  conditions.rs  context.rs  diagnostics.rs  events.rs  integrator.rs  io.rs  mod.rs  mpi.rs  phasespace.rs  progress.rs  solver.rs  types.rs
src/tooling/core/algos/: aca.rs  amr.rs  flow_map.rs  global.rs  ht.rs  ht3d.rs  hybrid.rs  lagrangian.rs  macro_micro.rs  mod.rs  mp7.rs  sheet.rs  spectral.rs  spherical_repr.rs  tensor.rs  uniform.rs  wpfc.rs
src/tooling/core/conservation/: conservative_svd.rs  kfvs.rs  lomac.rs  mod.rs  rank_adaptive.rs
src/tooling/core/init/: arbitrary.rs  cosmological.rs  domain.rs  isolated.rs  mergers.rs  mod.rs  stability.rs  tidal.rs
src/tooling/core/init/input/: mandatory.rs  mod.rs  optional.rs
src/tooling/core/output/: caustic.rs  global.rs  mod.rs  phasespace.rs  primary.rs  velocity.rs
src/tooling/core/output/exit/: caustic.rs  mod.rs  package.rs  standard.rs
src/tooling/core/poisson/: exponential_sum.rs  fft.rs  fft_utils.rs  green_ht.rs  ht_poisson.rs  mod.rs  multigrid.rs  multipole.rs  range_separated.rs  spherical.rs  spherical_1d.rs  tensor_poisson.rs  tree.rs  utils.rs  vgf.rs
src/tooling/core/time/: adaptive.rs  blanes_moan.rs  bug.rs  cosmological.rs  helpers.rs  lawson.rs  lie.rs  mod.rs  parallel_bug.rs  rank_monitor.rs  rk_bug.rs  rkei.rs  rkn6.rs  strang.rs  unsplit.rs  yoshida.rs
src/tooling/core/time/constraints/: dynamical.rs  mod.rs  orbital.rs  spatial.rs  velocity.rs
src/tooling/validation/: bgk.rs  bump_on_tail.rs  casimir_higher.rs  cold_collapse.rs  conservation.rs  convergence.rs  free.rs  fujiwara.rs  helpers.rs  ht_diagnostic.rs  instability.rs  isochrone.rs  jeans_isolated.rs  king.rs  landau.rs  long_conservation.rs  mixing.rs  mms.rs  mod.rs  nfw_equilibrium.rs  nonlinear_landau.rs  plasma_echo.rs  plummer.rs  plummer_perturbation.rs  sheet_1d.rs  sine_wave_collapse.rs  spherical.rs  stability.rs  strong_landau.rs  triaxial_collapse.rs  two_stream.rs  uniform.rs  violent_relaxation.rs  waterbag.rs  zeldovich.rs
src/validation/: mod.rs
