[package]
name = "caustic"
version = "0.0.5"
edition = "2024"
description = "A General-Purpose 6D Collisionless Gravitational Dynamics Solver"
authors = ["Albin <albin@sjoegren.se>"]
license = "GPL-3.0"
repository = "https://github.com/resonant-jovian/caustic"
documentation = "https://docs.rs/caustic"
keywords = ["vlasov", "poisson", "simulation", "physics"]
categories = ["science", "simulation"]

[dependencies]
rust_decimal = "1.40.0" # High accuracy float handling
anyhow = "1.0.102"  # Error handling
thiserror = "2.0.18" # Error handling
rustfft = "6.4.1"   # FFT Poisson solver
rayon = "1.11.0"     # data-parallel loops over 6D grid
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
realfft = "3.5.0"    # Real-to-complex FFT (Hermitian symmetry)
tracing = "0.1"      # Zero-cost instrumentation spans
faer = "0.24.0"      # SVD, QR, LU — pure Rust, SIMD-accelerated
ndarray = "0.17.2"   # n-dimensional array containers for transfer tensors
# hdf5-metno = { version = "0.12.3", optional = true }   # behind `[features] hdf5 = [...]`

# Optional allocator / profiling deps behind feature flags
dhat = { version = "0.3", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
mimalloc = { version = "0.1", optional = true }
tracing-tracy = { version = "0.11", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
mimalloc-alloc = ["dep:mimalloc"]
dhat-heap = ["dep:dhat"]
tracy = ["dep:tracing-tracy"]

[[bench]]
name = "solver_kernels"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[lints.rust]
unsafe_code = "deny"
